--- a/templates/collection.html
+++ b/templates/collection.html
@@ -52,7 +52,7 @@
               <a href="http://www.weather.com.cn/weather/101010100.shtml"><h4 class="ui inverted header">北京 晴 -5°/6°</h4></a>
             </div>
             <a class="item title" href="{% url 'index'%}">
-              <h2 class="ui center aligned inverted header">新闻个性化推荐系统</h2>
+              <h2 class="ui center aligned inverted header">基于web的个性化新闻推荐系统</h2>
             </a>
             <div class="right menu">
                 {% if request.user.is_authenticated %}
