--- a/templates/login.html
+++ b/templates/login.html
@@ -60,7 +60,7 @@
 
             <div class="eleven wide column">
                 <h4 class="ui inverted right aligned header">
-                    <a href="{% url 'register' %}" style="color:#ff695e;">or Register</a>
+                    <a href="{% url 'register' %}" style="color:#ff695e;">or 注册</a>
                 </h4>
 
                 <form class="ui form error" method="post">
@@ -89,7 +89,7 @@
 
                     {% csrf_token %}
 
-                    <button class="ui inverted red circular right floated button" type="submit">Done</button>
+                    <button class="ui inverted red circular right floated button" type="submit">登录</button>
                 </form>
             </div>
         </div>
