--- a/templates/register.html
+++ b/templates/register.html
@@ -62,7 +62,7 @@
 
             <div class="eleven wide column">
                 <h4 class="ui inverted right aligned header">
-                    <a href="{% url 'login' %}" style="color:#ff695e;">or Login</a>
+                    <a href="{% url 'login' %}" style="color:#ff695e;">or 登陆</a>
                 </h4>
 
                 <form class="ui form error" method="post">
@@ -91,7 +91,7 @@
 
                     {% csrf_token %}
 
-                    <button class="ui inverted red circular right floated button" type="submit">Done</button>
+                    <button class="ui inverted red circular right floated button" type="submit">注册</button>
                 </form>
             </div>
         </div>
